WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111366
[chromium] Form controls on composited layers are not painted properly
https://bugs.webkit.org/show_bug.cgi?id=111366
Summary
[chromium] Form controls on composited layers are not painted properly
Alok Priyadarshi
Reported
2013-03-04 15:19:40 PST
Regression in
http://trac.webkit.org/changeset/138987
On windows PlatformContextSkia::m_drawingToImageBuffer still needs to be set when painting form controls on transparent layers. It is used as a hint to properly blend the bitmap painted using GDI, which does not handle the alpha channel properly.
Attachments
Patch
(1.71 KB, patch)
2013-03-04 15:32 PST
,
Alok Priyadarshi
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alok Priyadarshi
Comment 1
2013-03-04 15:32:32 PST
Created
attachment 191326
[details]
Patch
Alok Priyadarshi
Comment 2
2013-03-04 15:38:28 PST
Committed
r144688
: <
http://trac.webkit.org/changeset/144688
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug