[chromium] Form controls on composited layers are not painted properly https://bugs.webkit.org/show_bug.cgi?id=111366

Reviewed by James Robinson.

Set PlatformContextSkia::m_drawingToImageBuffer which is used as a hint to properly blend GDI-painted bitmap.

* platform/graphics/chromium/OpaqueRectTrackingContentLayerDelegate.cpp:
(WebCore::OpaqueRectTrackingContentLayerDelegate::paintContents):

Canonical link: https://commits.webkit.org/129722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144688 268f45cc-cd09-0410-ab3c-d52691b4dbfc